<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:aapt="http://schemas.android.com/aapt"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/lnLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPurple"
        android:paddingLeft="@dimen/_12sdp">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/imgBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:padding="5dp"
            app:srcCompat="@drawable/ic_back" />

        <TextView
            android:id="@+id/txtTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginLeft="@dimen/_15sdp"
            android:text="@string/title_search"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/_16sdp" />

        <EditText
            android:id="@+id/edtSearch"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_32sdp"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/_5sdp"
            android:layout_marginRight="@dimen/_5sdp"
            android:layout_toLeftOf="@+id/img_search"
            android:layout_toRightOf="@+id/imgBack"
            android:background="@drawable/custtom_edittext_oval"
            android:hint="@string/search"
            android:textColorHint="@color/colorWhite"
            android:inputType="text"
            android:maxLines="1"
            android:paddingLeft="@dimen/_10sdp"
            android:paddingRight="@dimen/_10sdp"
            android:textColor="@color/colorWhite"
            android:textCursorDrawable="@drawable/custom_color_cursor"
            android:visibility="gone" />

        <ImageView
            android:id="@+id/img_search"
            android:layout_width="@dimen/_30sdp"
            android:layout_height="@dimen/_24sdp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="@dimen/_10sdp"
            android:clickable="true"
            android:src="@drawable/custom_button_shadown" />
    </RelativeLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_search_disher"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:padding="@dimen/_10sdp"
        android:visibility="gone" />


    <LinearLayout
        android:id="@+id/ll_view_no_data"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:gravity="center"
        android:layout_weight="1"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_search_no_data" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_16sdp"
            android:layout_marginRight="@dimen/_16sdp"
            android:gravity="center"
            android:text="@string/title_search_no_data"
            android:textSize="@dimen/_13sdp" />
    </LinearLayout>
    <include layout="@layout/ads_footer" />
</LinearLayout>
