<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:aapt="http://schemas.android.com/aapt"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorWhite">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:overScrollMode="never"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/_156sdp"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="fitXY"
                    app:srcCompat="@drawable/bg_nav" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="vertical">

                <RelativeLayout
                    android:id="@+id/rl_home"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/brg_ripple"
                    android:gravity="center_vertical"
                    android:paddingLeft="16dp"
                    android:paddingTop="8dp"
                    android:paddingRight="16dp"
                    android:paddingBottom="8dp">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:id="@+id/ic_home"
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:scaleType="fitXY"
                        app:srcCompat="@drawable/ic_home" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_centerVertical="true"
                        android:layout_marginStart="16dp"
                        android:layout_marginLeft="16dp"
                        android:layout_toEndOf="@+id/ic_home"
                        android:layout_toRightOf="@+id/ic_home"
                        android:gravity="center_vertical"
                        android:text="@string/menu_home"
                        android:textColor="@android:color/black"
                        android:textSize="14sp" />
                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/rl_fauvarite"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/brg_ripple"
                    android:gravity="center_vertical"
                    android:paddingLeft="16dp"
                    android:paddingTop="8dp"
                    android:paddingRight="16dp"
                    android:paddingBottom="8dp">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:id="@+id/ic_fauvarite"
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:scaleType="fitXY"
                        app:srcCompat="@drawable/ic_heart" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_centerVertical="true"
                        android:layout_marginStart="16dp"
                        android:layout_marginLeft="16dp"
                        android:layout_toEndOf="@+id/ic_fauvarite"
                        android:layout_toRightOf="@+id/ic_fauvarite"
                        android:gravity="center_vertical"
                        android:text="@string/menu_like"
                        android:textColor="@android:color/black"
                        android:textSize="14sp" />
                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/rl_rate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/brg_ripple"
                    android:gravity="center_vertical"
                    android:paddingLeft="16dp"
                    android:paddingTop="8dp"
                    android:paddingRight="16dp"
                    android:paddingBottom="8dp">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:id="@+id/ic_rate"
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:scaleType="fitXY"
                        app:srcCompat="@drawable/ic_rate" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_centerVertical="true"
                        android:layout_marginStart="16dp"
                        android:layout_marginLeft="16dp"
                        android:layout_toEndOf="@+id/ic_rate"
                        android:layout_toRightOf="@+id/ic_rate"
                        android:gravity="center_vertical"
                        android:scaleType="fitXY"
                        android:text="@string/menu_rate"
                        android:textColor="@android:color/black"
                        android:textSize="14sp" />
                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/rl_share"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/brg_ripple"
                    android:gravity="center_vertical"
                    android:paddingLeft="16dp"
                    android:paddingTop="8dp"
                    android:paddingRight="16dp"
                    android:paddingBottom="8dp">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:id="@+id/ic_share"
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        app:srcCompat="@drawable/ic_share" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_centerVertical="true"
                        android:layout_marginStart="16dp"
                        android:layout_marginLeft="16dp"
                        android:layout_toEndOf="@+id/ic_share"
                        android:layout_toRightOf="@+id/ic_share"
                        android:gravity="center_vertical"
                        android:text="@string/menu_share"
                        android:textColor="@android:color/black"
                        android:textSize="14sp" />
                </RelativeLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>
